--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="frag_title_popular">Popular</string>
-    <string name="frag_title_top_rated">Top Rated</string>
+    <string name="frag_title_moviess">Movies</string>
+    <string name="frag_title_favourite">My Favourite</string>
     <string name="nav_settings">Settings</string>
     <string name="frag_title_sort_by">Sort By</string>
     <string name="no_movies">no movies</string>
@@ -17,6 +17,8 @@
     <string name="top_rated">top_rated</string>
     <string name="not_available_movie">Movie not available</string>
     <string name="extra_movie">extraMovie</string>
+    <string name="is_available_favourite">Select Favourite Movie First</string>
+    <string name="preference_file_key">com.efhemo.movienano</string>
 
     <array name="pref_entries_name">
         <item>Popular</item>
